digitize view not showing when resizing issue fix

--- a/src/features/Container/Protocols/SourcePDFPanel/PdfViewer.scss
+++ b/src/features/Container/Protocols/SourcePDFPanel/PdfViewer.scss
@@ -104,3 +104,9 @@
     }
   }
 }
+
+@media only screen and (max-width: 1000px) {
+  body {
+    overflow-x: scroll;
+  }
+}
